# End-to-End-LLM-ChatBot

./: .dockerignore  .env.example  .gitignore  README.md  dockerfile  ecs-task-def.json  params.yaml  pyproject.toml  requirements.txt  streamlit_app.py
.dvc/: config
.github/workflows/: deploy.yaml
app/: __init__.py  aws_rds_db.py  chatbot.py  config.py  main.py  mysql_workbench_db.py  postgre_db.py  sqlite_db.py  utils.py
app/api/: fastapi_app.py
app/db/: mango_database.py
app/services/: chatbot.py
app/tests/: smoke_test_chat.py
config/: params.yaml
data/: .gitignore  chat_history.db.dvc  chat_logs.csv.dvc
frontend/: chatbot_app.py
