[project]
name = "llm-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awscli>=1.42.61",
    "dvc[s3]>=3.63.0",
    "fastapi>=0.120.4",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "mlflow>=3.5.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
